--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,7 @@ $bg-color: #333;
 $font-color: #fff;
 $primary-color: #008ed6;
 $dark-overlay: rgba(0,0,0, 0.7);
-$font-size: 25px;
+$icon-size: 25px;
 
 body{
   background: $bg-color;
@@ -14,35 +14,45 @@ body{
   opacity: 0.8;
 }
 
-#home-section{
-  background:url('../img/home.jpg') no-repeat;
-  background-size:cover;
-  background-attachment:fixed;
+#home-section {
+  background: url('../img/home.jpg') no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   min-height: 700px;
 
-  .home-inner{
+  .home-inner {
     padding-top: 150px;
   }
 
-  .dark-overlay{
+  .dark-overlay {
     background-color: $dark-overlay;
     position: absolute;
-    top:0;
-    left:0;
-    width:100%;
+    top: 0;
+    left: 0;
+    width: 100%;
     min-height: 700px;
   }
 
-  .card-form{
+  .card-form {
     opacity: 0.8;
   }
 
-  .fa{
-    color:$primary-color;
-    background:#fff;
-    padding:4px;
-    border-radius:5px;
-    font-size: $font-size;
+  .fa {
+    color: $primary-color;
+    background: #fff;
+    padding: 4px;
+    border-radius: 5px;
+    font-size: $icon-size;
   }
 
+}
+
+#explore-section{
+  .fa{
+    color:#fff;
+    background: #333;
+    padding:4px;
+    border-radius:5px;
+    font-size:$icon-size;
+  }
 }
